--- a/.github/workflows/nuget-publish.yml
+++ b/.github/workflows/nuget-publish.yml
@@ -12,10 +12,10 @@ jobs:
       - name: 🔄 Checkout code
         uses: actions/checkout@v4
 
-      - name: ⚙️ Setup .NET
+      - name: ⚙️ Setup .NET 9
         uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: '9.0.x' # adapte à ta version de .NET
+          dotnet-version: '9.0.x'
 
       - name: 📦 Restore dependencies
         run: dotnet restore
